Sat Jan 15 04:35:59 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* GormObjectEditor.m ([GormObjectEditor -activate]),
 	([GormObjectEditor -orderFront]): Trivial fix to make it compile.

Fri Jan 14 16:22:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormDocument.m: Fix to deactivate editors while copying to pb
	and add support for a few more document setup types.
	* Gorm.m: Add Inspector, Panel and Empty documents.

Fri Jan 14  9:34:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Palettes/OMenus/GormMenuEditor.m: ([mouseDown:]) support for
	dragging menu items to rearrange their order.

Thu Jan 13 20:34:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Preliminary menu support (very limited).

Fri Jan  7 11:03:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUmakefile: Set Gorm_PRINCIPAL_CLASS
	* Gorm.m: Do startup stuff in [-finishLaunching] and use the
	NSApplicationMain() function to run the app (as well-behaved apps do).

Wed Jan  5 17:00:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Palettes/0Menu/main.m: First cut at code for providing menus items
	on the palette.
	* GormWindowEditor.m: accept first mouse so we act immediately that
	the mouse is clicked anywhere in the window.
	* Palettes/1Window/main.m: Tidy attributes editor and add support
	for setting window title.

Tue Jan  4 17:42:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added 'miniaturize', 'close', and 'revert to saved' menu items and
	implemented their actions.

Tue Jan  4 12:13:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Various tidyups
	Somewhat improved documentation
	Added registration ddefaults stuff

Mon Jan  3 10:50:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Rewrote testing mechanism so that we test by creating an in-memory
	nib, and load that nib.  This way, the testing process has no effect
	on the original objects in the document we are working on.