@@ -31,8 +31,9 @@ extern NSString *GormLinkPboardType;
   NSMutableArray	*documents;
   BOOL			isConnecting;
   BOOL			isTesting;
-  NSMutableArray	*hiddenDuringTest;
   id			testContainer;
+  NSMenu		*mainMenu;
+  NSDictionary		*menuLocations;
   NSImage		*linkImage;
   NSImage		*sourceImage;
   NSImage		*targetImage;
