@@ -1,3 +1,8 @@
+Thu Feb  3 16:16:59 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Gorm.m: tidied start/end testing.
+	* GormDocument.m: ditto
+
 Sat Jan 15 04:35:59 2000  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* GormObjectEditor.m ([GormObjectEditor -activate]),
